@@ -1,10 +1,20 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
+    
     <groupId>example</groupId>
     <artifactId>myservice</artifactId>
     <version>1.0-SNAPSHOT</version>
+    
     <packaging>war</packaging>
+    
+    <properties>
+        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+        <maven.compiler.source>1.8</maven.compiler.source>
+        <maven.compiler.target>1.8</maven.compiler.target>
+        <failOnMissingWebXml>false</failOnMissingWebXml>
+    </properties>
+    
     <dependencies>
         <dependency>
             <groupId>jakarta.platform</groupId>
@@ -15,24 +25,78 @@
         <dependency>
             <groupId>org.eclipse.microprofile</groupId>
             <artifactId>microprofile</artifactId>
-            <version>3.0</version>
+            <!-- NOTE: Latest version supported in WF 19 -->
+            <version>3.3</version> 
             <type>pom</type>
             <scope>provided</scope>
         </dependency>
-        <!-- swagger -->
+        <!-- NOTE: The artifactId changed a while back -->
         <dependency>
             <groupId>org.microprofile-ext.openapi-ext</groupId>
-            <artifactId>swagger-ui</artifactId>
-            <version>1.0.3</version>
+            <artifactId>openapi-ui</artifactId>
+            <version>1.1.3</version>
         </dependency>
     </dependencies>
+    
     <build>
-        <finalName>myservice</finalName>
+        <finalName>${project.artifactId}</finalName>
     </build>
-    <properties>
-        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-        <maven.compiler.source>1.8</maven.compiler.source>
-        <maven.compiler.target>1.8</maven.compiler.target>
-        <failOnMissingWebXml>false</failOnMissingWebXml>
-    </properties>
+    
+    
+    <profiles>
+        <!-- NOTE: Allows you to run mvn verify -Pwildfly -->
+        <profile>
+            <id>wildfly</id>
+                    
+            <build>
+                
+                <plugins>
+        
+                    <plugin>
+                        <groupId>org.wildfly.plugins</groupId>
+                        <artifactId>wildfly-maven-plugin</artifactId>
+                        <version>2.0.2.Final</version>    
+                        <configuration>
+                            <version>19.0.0.Final</version> 
+                            <server-config>standalone-microprofile.xml</server-config>
+                            <systemProperties>
+                                <jboss.tx.node.id>1</jboss.tx.node.id>
+                            </systemProperties>
+                            <!-- So that you can log into localhost:9990 -->
+                            <add-user>
+                                <users>
+                                    <user>
+                                        <username>admin</username>
+                                        <password>admin</password>
+                                        <groups>
+                                            <group>admin</group>
+                                        </groups>
+                                    </user>
+                                </users>
+                            </add-user>
+                        </configuration>
+                        <executions>
+                            <execution>
+                                <phase>install</phase>
+                                <goals>
+                                    <goal>run</goal>
+                                </goals>                                
+                            </execution>
+                        </executions>
+                    </plugin>    
+                </plugins>
+            </build>
+        </profile>
+        
+        
+        <profile>
+            <id>jdk11plus</id>
+            <activation>
+                <jdk>[11,)</jdk>
+            </activation>
+            <properties>
+                <jboss.extra.opts>--add-modules java.se</jboss.extra.opts>
+            </properties>
+        </profile>
+    </profiles>
 </project>
